--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
-  --c-accent: #6BC0A2;
-  --c-accent-2: #DCB872;
+  --c-accent: #DCB872;
   /* --c-accent: #ff4136; */
   /* Background */
   --c-bg-primary: #000;
